# ts_lesson_1

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile_win  LICENSE  README.md  before_build.sh  build.sh  conanfile.py  gcc_profile
src/: CMakeLists.txt
test_package/: CMakeLists.txt  conanfile.py
